deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  namespace: test-pod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
