pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: my-nginx-pod
 namespace: test-pod
spec:
  containers:
  - name: nginx
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
