service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  namespace: test-pod
spec:
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
