ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: test-pod
spec:
  ingressClassName: nginx
  rules:
  - host: my-app-test.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-nginx-service
            port:
              number: 8080
